k8s/cart-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: souravdeveloper/ecom-cart
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
spec:
  selector:
    app: cart
  type: ClusterIP
  ports:
    - name: cart
      targetPort: 3000
      port: 3000
      protocol: TCP
