k8s/cart-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-postgres
  template:
    metadata:
      labels:
        app: cart-postgres
    spec:
      containers:
        - name: cart-postgres
          image: postgres:14-alpine
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: cart-postgres-db
      volumes:
        - name: cart-postgres-db
          persistentVolumeClaim:
            claimName: postgresql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cart-postgres-srv
spec:
  type: NodePort
  selector:
    app: cart-postgres
  ports:
    - name: db
      port: 5432
