k8s/ingress-depl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ecom.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 4000

          - path: /api/cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-srv
                port:
                  number: 3000

          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 4000
